// Copyright 2023 gRPC authors.

syntax = "proto3";

package test.csharp.codegen.simple.proto.helloworld;

service Greeter {

  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc SayHelloStreamReply (HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
